# nova-oxide

./: .env  .gitignore  Cargo.toml  pyproject.toml  requirements.txt
src/: main.rs
